--- a/.pylintrc
+++ b/.pylintrc
@@ -425,7 +425,9 @@ disable=raw-checker-failed,
         missing-module-docstring,
         missing-function-docstring,
         missing-class-docstring,
-        logging-fstring-interpolation
+        logging-fstring-interpolation,
+        consider-using-with,
+        use-dict-literal
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
