--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ webdriver-manager
 packaging
 html5lib
 bs4
-fake_headers
 emoji==2.8.0
 requests~=2.31.0
 configparser~=6.0.0
@@ -13,3 +12,4 @@ lxml
 requests-html-playwright~=0.11.2
 chromedriver-py
 scrapetube
+ua-generator
