--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,16 @@
 selenium~=4.14.0
-webdriver-manager
-packaging
-html5lib
 bs4~=0.0.1
 emoji==2.8.0
 requests~=2.31.0
-configparser~=6.0.0
 pandas~=2.1.2
 beautifulsoup4~=4.12.2
-lxml
-requests-html-playwright~=0.11.2
-chromedriver-py
 scrapetube~=2.5.1
-ua-generator
 setuptools~=68.2.0
 playwright~=1.40.0
-chromedriver-autoinstaller
+requests-html-playwright~=0.11.2
 
 jmespath~=1.0.1
+ua_generator
+parsel==1.8.1
+nested_lookup
+html5lib
